# material-symbols

./: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json
src/: file_ops.rs  icon.rs  main.rs  utils.rs
