[package]
name = "material-symbols"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
regex = "1.5"
futures = "0.3"
Inflector = "0.11"
indicatif = "0.16"
